POST/GET methods used, still needs some work

--- a/FlaskProject_1/templates/base.jinja2
+++ b/FlaskProject_1/templates/base.jinja2
@@ -7,8 +7,10 @@
 <!DOCTYPE html>
 <html lang='en-US'>
 <head>
-<title>My Jinja2 File</title>
+<title>My Blog of IT</title>
 <body>
+<hr>
+<a href="{{url_for('home')}}">Home</a>
 {% block content %}
 
 
