--- a/FlaskProject_1/templates/create.jinja2
+++ b/FlaskProject_1/templates/create.jinja2
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h1> Create Post</h1>
-<form action="post/create">
+<form method="POST">
     <div>
         <label for="'title">Title</label>
         <input type="text" name="title"</>
